feat: add deploy setup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Source+Code+Pro&family=Titillium+Web&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/crypt.css" />
+    <link rel="stylesheet" href="crypt.css" />
     <style>
       html {
         background-color: var(--neutral);
