--- a/index.html
+++ b/index.html
@@ -63,6 +63,50 @@
                 <label for="input-2">Name</label>
                 <input type="text" id="input-2" placeholder="Enter your name" />
               </div>
+              <div class="crypt-form-field full">
+                <svg
+                  class="icon"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  width="24px"
+                  height="24px"
+                >
+                  <path
+                    d="M 9 2 C 5.1458514 2 2 5.1458514 2 9 C 2 12.854149 5.1458514 16 9 16 C 10.747998 16 12.345009 15.348024 13.574219 14.28125 L 14 14.707031 L 14 16 L 20 22 L 22 20 L 16 14 L 14.707031 14 L 14.28125 13.574219 C 15.348024 12.345009 16 10.747998 16 9 C 16 5.1458514 12.854149 2 9 2 z M 9 4 C 11.773268 4 14 6.2267316 14 9 C 14 11.773268 11.773268 14 9 14 C 6.2267316 14 4 11.773268 4 9 C 4 6.2267316 6.2267316 4 9 4 z"
+                  />
+                </svg>
+                <input type="text" id="input-2" placeholder="Search" />
+                <svg
+                  class="icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 24 24"
+                  width="24px"
+                  height="24px"
+                >
+                  <g id="surface112362700">
+                    <path
+                      style="
+                        stroke: none;
+                        fill-rule: nonzero;
+                        fill: currentColor;
+                        fill-opacity: 1;
+                      "
+                      d="M 0 12 C 0 5.371094 5.371094 0 12 0 C 18.628906 0 24 5.371094 24 12 C 24 18.628906 18.628906 24 12 24 C 5.371094 24 0 18.628906 0 12 Z M 12 22.558594 C 17.832031 22.558594 22.558594 17.832031 22.558594 12 C 22.558594 6.167969 17.832031 1.441406 12 1.441406 C 6.167969 1.441406 1.441406 6.167969 1.441406 12 C 1.441406 17.832031 6.167969 22.558594 12 22.558594 Z M 12 22.558594 "
+                    />
+                    <path
+                      style="
+                        stroke: none;
+                        fill-rule: nonzero;
+                        fill: currentColor;
+                        fill-opacity: 1;
+                      "
+                      d="M 6.164062 5.035156 L 5.035156 6.164062 L 10.867188 12 L 5.035156 17.835938 L 6.164062 18.964844 L 12 13.132812 L 17.835938 18.964844 L 18.964844 17.835938 L 13.132812 12 L 18.964844 6.164062 L 17.835938 5.035156 L 12 10.867188 Z M 6.164062 5.035156 "
+                    />
+                  </g>
+                </svg>
+              </div>
             </div>
           </div>
         </section>
