feat: add core input

--- a/index.html
+++ b/index.html
@@ -110,6 +110,37 @@
             </div>
           </div>
         </section>
+        <section>
+          <h2>Core Input</h2>
+          <div class="section-group">
+            <div class="crypt-core-input large">
+              <input type="text" placeholder="0%" />
+            </div>
+            <div class="crypt-core-input large secondary">
+              <input type="text" placeholder="0%" />
+            </div>
+            <div class="crypt-core-input large success">
+              <input type="text" placeholder="0%" />
+            </div>
+            <div class="crypt-core-input large danger">
+              <input type="text" placeholder="0%" />
+            </div>
+          </div>
+          <div class="section-group">
+            <div class="crypt-core-input small">
+              <input type="text" placeholder="0%" />
+            </div>
+            <div class="crypt-core-input small secondary">
+              <input type="text" placeholder="0%" />
+            </div>
+            <div class="crypt-core-input small success">
+              <input type="text" placeholder="0%" />
+            </div>
+            <div class="crypt-core-input small danger">
+              <input type="text" placeholder="0%" />
+            </div>
+          </div>
+        </section>
         <section id="toggle-box">
           <h2>Toggle</h2>
           <div class="section-group">
